--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,6 +29,7 @@ main {
 }
 
 .search {
+  margin-top: 1rem;
   padding: 0.5rem 1rem;
 
   input {
@@ -36,7 +37,7 @@ main {
   }
 }
 
-section {
+.restaurants {
   margin: 2rem 0;
 
   display: grid;
