--- a/src/app/components/restaurant/restaurant.component.scss
+++ b/src/app/components/restaurant/restaurant.component.scss
@@ -1,5 +1,31 @@
-.header {
+header,
+footer {
   padding: 0.5rem;
   font-size: 1rem;
   font-weight: 600;
+}
+
+footer {
+  font-weight: normal;
+  margin-top: auto;
+  margin-bottom: 1rem;
+  background: #efefef;
+  color: #999;
+  padding: 1rem;
+
+  a {
+    margin-left: 1rem;
+    text-decoration: none;
+    transition: opacity 300ms ease;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
