--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,44 @@ main {
   padding: 2rem;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+
+  li {
+    margin: 0;
+
+    + li {
+      margin-left: 0.5rem;
+    }
+  }
+}
+
+header {
+  + * {
+    margin-top: 2rem;
+  }
+}
+
+a {
+  color: black;
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &.current {
+    opacity: 0.5;
+    text-decoration: underline;
+  }
+}
+
 .custom-input {
   display: inline-block;
   border-radius: 1.5rem;
@@ -35,24 +73,4 @@ main {
   input {
     padding: 0 1rem;
   }
-}
-
-.restaurants {
-  margin: 2rem 0;
-
-  display: grid;
-  grid-template-columns: 1fr;
-
-  @media screen and (min-width: 1024px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  grid-gap: 1rem;
-}
-
-article {
-  border-bottom-left-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-  border: 1px solid #eeeeee;
 }
