--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,6 +28,36 @@ header {
   }
 }
 
+.line {
+  > * + * {
+    margin-top: 1rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+
+    > * + * {
+      margin-top: 0;
+    }
+  }
+}
+
+.expand {
+  line-height: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  @media screen and (min-width: 1024px) {
+    display: none;
+  }
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -45,7 +75,8 @@ a {
 .custom-input {
   display: inline-block;
   border-radius: 1.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  border: 2px solid black;
+
   padding: 0.5rem;
 
   min-width: 3rem;
@@ -66,11 +97,45 @@ a {
   }
 }
 
+.places {
+  margin-top: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+
+  .custom-input {
+    opacity: 0.2;
+    margin: 0.5rem;
+    text-decoration: line-through;
+    border: 0;
+    margin: 10px;
+
+    &.active {
+      opacity: 1;
+      text-decoration: none;
+      border: 2px solid black;
+      margin: 8px;
+      &:hover {
+        text-decoration: line-through;
+      }
+    }
+  }
+}
+
 .search {
-  margin-top: 1rem;
   padding: 0.5rem 1rem;
 
   input {
     padding: 0 1rem;
   }
+}
+
+.collapsed {
+  position: relative;
+  display: none;
+}
+
+.toggle {
+  transform: scale(-1);
 }
