--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -12,6 +12,5 @@
 article {
   border-bottom-left-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-  border: 1px solid #eeeeee;
+  border: 2px solid black;
 }
