--- a/src/app/components/restaurant/restaurant.component.scss
+++ b/src/app/components/restaurant/restaurant.component.scss
@@ -8,15 +8,13 @@ footer {
 footer {
   font-weight: normal;
   margin-top: auto;
-  margin-bottom: 1rem;
-  background: #efefef;
-  color: #999;
-  padding: 1rem;
+  border-top: 2px solid black;
+
+  padding: 1rem 0.75rem;
 
   a {
-    margin-left: 1rem;
+    margin-left: 0.75rem;
     text-decoration: none;
-    transition: opacity 300ms ease;
 
     &:hover {
       opacity: 0.5;
