Added restaurant page, reworked router

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,8 @@
 <article>
   <div class="header">
+    <div *ngIf="showYear">
+      {{ menu.year }}
+    </div>
     <div>
       {{ menu.name }}
     </div>
