--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,7 +10,7 @@
 }
 
 article {
-  border-bottom-left-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+  box-shadow: 0.25rem 0.25rem 0 black;
+
   border: 2px solid black;
 }
