--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -52,24 +52,10 @@ header {
   }
 }
 
-a {
-  color: black;
-  text-decoration: none;
-
-  &:hover {
-    opacity: 0.7;
-  }
-
-  &.current {
-    opacity: 0.5;
-    text-decoration: underline;
-  }
-}
-
 .custom-input {
   display: inline-block;
-  border-radius: 1.5rem;
   border: 2px solid black;
+  box-shadow: 0.25rem 0.25rem 0 black;
 
   padding: 0.5rem;
 
@@ -77,7 +63,6 @@ a {
   text-align: center;
 
   cursor: pointer;
-  position: relative;
   input {
     border: 0;
     outline: none;
@@ -104,12 +89,15 @@ a {
     text-decoration: line-through;
     border: 0;
     margin: 10px;
+    box-shadow: none;
 
     &.active {
       opacity: 1;
       text-decoration: none;
       border: 2px solid black;
       margin: 8px;
+      box-shadow: 0.25rem 0.25rem 0 black;
+
       &:hover {
         text-decoration: line-through;
       }
