--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 main {
   max-width: 1024px;
   margin: auto;
-  padding: 2rem;
+  @media screen and (min-width: 1024px) {
+    padding: 2rem;
+  }
 }
