Added latest menus

--- a/src/app/components/about-page/about-page.component.html
+++ b/src/app/components/about-page/about-page.component.html
@@ -6,9 +6,11 @@
 
   <section>
     <p>Questa pagina è frutto di sudore passione e pochissimo senso estetico</p>
-    <p>Visto che trovo il <a href="https://www.baccanaleimola.it/index">sito
-        originale del Baccanale</a> decisamente scomodo, ne ho fatto uno
-      alternativo per capirci qualcosa.</p>
+    <p>Quest'anno (2020) è stato aggiornato il sito <a
+        href="https://www.baccanaleimola.it">sito
+        originale del Baccanale</a>, perciò questo mio progetto perde un po' di
+      significato, ma lo trovo comunque più comodo da consultare perciò l'ho
+      aggiornato con i nuovi menu.</p>
 
 
     <ul>
